--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>Resume Builder</title>
     
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">  
   <link href="assets/css/style.css" rel="stylesheet">
@@ -13,7 +13,7 @@
         <div class="container text-center">
           <h1>Welcome to a Resume Builder Website</h1>
         <br>
-          <h2>Developed by <a href="https://www.linkedin.com/in/tanay-patil25">Tanay Patil</a> II Year CSE student from AITR, Indore.</h2>
+          <h2>Developed by <a href="https://www.linkedin.com/in/tanay-patil25" target="_blank">Tanay Patil</a> II Year CSE student from AITR, Indore.</h2>
         </div>
 
           <id="resume" class="resume">
@@ -30,7 +30,7 @@
     <div class="resume-item">
         <h4>How to use this? :</h4>
     </div>
-    <a href="resume.html">
+    <a href="resume.html" target="_blank">
         <button class="button">
             Click Here To Proceed
         </button>
@@ -47,7 +47,7 @@
       ‣Click the bottom Save Button. <br>
       ‣Finally your resume have been saved in your device.S</p>
       <br>
-      <a href="resume.html">
+      <a href="resume.html" target="_blank">
         <button class="button">
             Click Here To Proceed
         </button>
