--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+        <title>Build Your Resume</title>
+
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
