--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       ‣It opens a new popup window. <br>
       ‣change destination to "Save as pdf" and enable Background Graphics Option. <br>
       ‣Click the bottom Save Button. <br>
-      ‣Finally your resume have been saved in your device.S</p>
+      ‣Finally your resume have been saved in your device.</p>
       <br>
       <a href="resume.html" target="_blank">
         <button class="button">
