--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       ‣Now enter your details as per your needs. <br>
       ‣After filling all information click on the "Save Your Resume" buttom. <br>
       ‣It opens a new popup window. <br>
-      ‣change destination to "Save as pdf" and enable Background Graphics Option. <br>
+      ‣Change destination to "Save as pdf" and enable Background Graphics Option. <br>
       ‣Click the bottom Save Button. <br>
-      ‣Finally your resume have been saved in your device.</p>
+      ‣Finally the resume has been saved in your device.</p>
       <br>
       <a href="resume.html" target="_blank">
         <button class="button">
